[gd_scene load_steps=7 format=3 uid="uid://chvvw3lntqbug"]

[ext_resource type="PackedScene" uid="uid://cl22ggaym5eui" path="res://escenas/player.tscn" id="1_bp5up"]
[ext_resource type="Script" uid="uid://cbnfdau5hr5he" path="res://escenas/game.gd" id="1_l5nui"]
[ext_resource type="Texture2D" uid="uid://bi8ichugugt1i" path="res://sprites/New Piskel.png" id="2_oyqkt"]
[ext_resource type="PackedScene" uid="uid://ciith8xm4fqln" path="res://escenas/enemy.tscn" id="3_l5nui"]
[ext_resource type="Script" uid="uid://dk0tc1ovges1d" path="res://scripts/life.gd" id="4_bxxmx"]
[ext_resource type="Script" uid="uid://vw6pwjlwnhag" path="res://escenas/gamestart.gd" id="6_i3uue"]

[node name="game" type="Node2D"]
process_mode = 1
script = ExtResource("1_l5nui")

[node name="Background" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.7, 0.7)
repeat_size = Vector2(1024, 1024)

[node name="TextureRect" type="TextureRect" parent="Background"]
texture_repeat = 2
custom_minimum_size = Vector2(4096, 4096)
offset_left = -1364.0
offset_top = -622.0
offset_right = 2732.0
offset_bottom = 3474.0
texture = ExtResource("2_oyqkt")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("1_bp5up")]
position = Vector2(1152, 669)

[node name="enemy" parent="." instance=ExtResource("3_l5nui")]
process_mode = 1
position = Vector2(857, 304)

[node name="Diff" type="Timer" parent="."]
wait_time = 10.0

[node name="Enemies" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Life" type="ProgressBar" parent="."]
modulate = Color(0.712719, 0.999123, 0.707831, 1)
self_modulate = Color(0.325867, 0.94, 0.188, 1)
top_level = true
offset_left = -48.0
offset_top = -12.0
offset_right = 53.0
offset_bottom = 15.0
max_value = 3.0
value = 3.0
show_percentage = false
script = ExtResource("4_bxxmx")

[node name="Gamover" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="Gamover"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.368627)

[node name="gameova" type="Label" parent="Gamover/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -46.0
offset_top = -23.0
offset_right = 46.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 75
text = "GAME OVER"

[node name="restarr? press R" type="Label" parent="Gamover/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 100
text = "TO RESTART PRESS R"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Mobs" type="Timer" parent="."]
process_mode = 1
wait_time = 12.0

[node name="Gamestart" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
script = ExtResource("6_i3uue")

[node name="ColorRect" type="ColorRect" parent="Gamestart"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.368627)

[node name="gameova" type="Label" parent="Gamestart/ColorRect"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -504.0
offset_right = 504.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 75
text = "BIENVENIDO AL TILINJUEGO
PARA EMPEZAR PRESIONA 
CUALQUIER TECLA"
horizontal_alignment = 1

[connection signal="attacked" from="Player" to="Life" method="_on_player_attacked"]
[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Diff" to="." method="_on_diff_timeout"]
[connection signal="timeout" from="Enemies" to="." method="_on_enemies_timeout"]
[connection signal="timeout" from="Mobs" to="." method="_on_mobs_timeout"]
